--- a/guesscasso/src/app/globals.css
+++ b/guesscasso/src/app/globals.css
@@ -19,3 +19,11 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+@layer base {
+  p {
+    font-family: var(--font-geist-mono);
+    font-size: small;
+  }
+}
