--- a/guesscasso/src/app/globals.css
+++ b/guesscasso/src/app/globals.css
@@ -19,6 +19,10 @@ body {
         font-family: var(--font-geist-mono);
         font-size: small;
     }
+    button {
+        font-family: var(--font-geist-mono);
+        font-size: small;
+    }
     footer {
         font-family: var(--font-geist-mono);
         font-size: small;
